updated code- final

--- a/index.html
+++ b/index.html
@@ -3,7 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Week 04 Assignment</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="logo">Leaflet Tea</h1>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our Teas</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero-content">
+          <h2>Herbal Tea for a Calmer You</h2>
+          <p>Crafted with nature. Sipped with intention.</p>
+          <a href="#" class="signup-button">Join Our Tea Club</a>
+        </div>
+        <img
+          src="/assets/hero-tea.jpg"
+          alt="A warm cup of herbal tea surrounded by flowers and tasting notes"
+          class="hero-img"
+        />
+      </section>
+
+      <section class="features">
+        <div class="feature">
+          <h3>100% Natural</h3>
+          <p>Our blends are free from additives and preservatives.</p>
+        </div>
+        <div class="feature">
+          <h3>Ethically Sourced</h3>
+          <p>Supporting small-scale farmers and sustainable practices.</p>
+        </div>
+        <div class="feature">
+          <h3>Mindfully Crafted</h3>
+          <p>Each cup is designed to bring you back to the present moment.</p>
+        </div>
+      </section>
+
+      <section class="about">
+        <h2>About Leaflet</h2>
+        <p>
+          At Leaflet, we believe that wellness begins with the little things —
+          like a calming cup of tea. Our mission is to reconnect people with
+          nature through simple, mindful rituals.
+        </p>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>&copy; 2025 Leaflet Tea Company. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
