--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="#" class="signup-button">Join Our Tea Club</a>
         </div>
         <img
-          src="/assets/hero-tea.jpg"
+          src="assets/hero-tea.jpg"
           alt="A warm cup of herbal tea surrounded by flowers and tasting notes"
           class="hero-img"
         />
